cmake_minimum_required(VERSION 2.8)
project(baba)
include (CheckIncludeFiles)
check_include_files (sys/signalfd.h HAVE_SYS_SIGNALFD_H)
configure_file (${PROJECT_SOURCE_DIR}/config.h.in ${PROJECT_BINARY_DIR}/config.h)
include_directories("${PROJECT_BINARY_DIR}") # for config.h
add_executable(baba baba.cc)
install(TARGETS baba DESTINATION bin)
enable_testing()
add_test(NAME test.sh COMMAND ${PROJECT_SOURCE_DIR}/test.sh)